# pandora-core-conversion

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_conversion_tables.py  0001_initial_mariadb.py  0002_group_user_daily_streaks.py  0002_initial_gamification_tables.py  0003_gamification_outbox.py  0004_gamification_outfit_catalog.py  0005_user_outfits.py  0006_mascot_manifest.py
app/: __init__.py  config.py  db.py  main.py
app/auth/: internal.py  jwt_verifier.py  middleware.py
app/conversion/: cache_invalidator.py  lifecycle.py  models.py  mothership.py  routes.py  schemas.py  service.py
app/gamification/: catalog.py  group_streak_service.py  models.py  outbox.py  outbox_worker.py  routes.py  schemas.py  service.py
app/health/: routes.py
tests/: conftest.py  test_health.py
tests/conversion/: test_cache_invalidator.py  test_event_ingest.py  test_internal_endpoints.py  test_lifecycle.py  test_lifecycle_rules.py  test_mothership_client.py
tests/gamification/: test_achievements.py  test_bootstrap_ledger.py  test_calendar_catalog.py  test_event_ingest.py  test_group_streak.py  test_level_math.py  test_mascot_manifest.py  test_outbox.py  test_outbox_worker.py  test_outfits.py  test_streak_catalog.py  test_user_outfits.py  test_user_sync.py
